cabal-version: 3.0
name:          marconi-cardano-indexers
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        IOHK
maintainer:    operations@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>.

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

flag ci
  description: Toggle features on/off when in CI
  manual:      True
  default:     True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.Cardano.Indexers
    Marconi.Cardano.Indexers.BlockInfo
    Marconi.Cardano.Indexers.ChainTip
    Marconi.Cardano.Indexers.Coordinator
    Marconi.Cardano.Indexers.CurrentSyncPointQuery
    Marconi.Cardano.Indexers.Datum
    Marconi.Cardano.Indexers.EpochNonce
    Marconi.Cardano.Indexers.EpochSDD
    Marconi.Cardano.Indexers.ExtLedgerStateCoordinator
    Marconi.Cardano.Indexers.MintTokenEvent
    Marconi.Cardano.Indexers.MintTokenEventQuery
    Marconi.Cardano.Indexers.SnapshotBlockEvent
    Marconi.Cardano.Indexers.Spent
    Marconi.Cardano.Indexers.SyncHelper
    Marconi.Cardano.Indexers.Utxo
    Marconi.Cardano.Indexers.UtxoQuery

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended}
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                   ^>=8.20
    , cardano-ledger-alonzo         >=1.3.1.1
    , cardano-ledger-api
    , cardano-ledger-babbage        >=1.4.0.1
    , cardano-ledger-conway         >=1.5
    , cardano-ledger-core
    , cardano-ledger-mary           >=1.3.0.2
    , cardano-ledger-shelley
    , cardano-protocol-tpraos       >=1.0.3.3
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base               >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cborg
    , containers
    , directory
    , filepath
    , lens
    , mtl
    , prettyprinter
    , sqlite-simple
    , text
    , time
    , transformers
    , vector-map

test-suite marconi-cardano-indexers-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Marconi.Cardano.Indexers
    Spec.Marconi.Cardano.Indexers.BlockInfo
    Spec.Marconi.Cardano.Indexers.ChainTip
    Spec.Marconi.Cardano.Indexers.Datum
    Spec.Marconi.Cardano.Indexers.MintTokenEvent
    Spec.Marconi.Cardano.Indexers.Spent
    Spec.Marconi.Cardano.Indexers.Utxo
    Spec.Marconi.Cardano.Indexers.UtxoQuery
    Spec.Marconi.Cardano.Snapshot

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended, marconi-cardano-core-test-lib}
    , marconi-cardano-indexers
    , marconi-cardano-indexers-test-lib
    , marconi-core:{marconi-core, marconi-core-test-lib}

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                  ^>=8.20
    , cardano-api-gen              ^>=8.2
    , cardano-crypto-class
    , cardano-ledger-alonzo        >=1.3.1.1
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-node-emulator
    , cardano-slotting             ^>=0.1.1.1
    , hedgehog-extras
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network
    , plutus-core
    , plutus-ledger-api            ^>=1.9
    , plutus-tx
    , plutus-tx-plugin
    , process

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base                  >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cborg
    , comonad
    , containers
    , contra-tracer
    , directory
    , filepath
    , hedgehog
    , lens
    , mtl
    , optparse-applicative
    , postgresql-simple
    , prettyprinter
    , sqlite-simple
    , streaming
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , temporary
    , text
    , time
    , transformers

library marconi-cardano-indexers-test-lib
  import:          lang

  -- Needed or else GHC will say that plutus-tx-plugin was not needed for compilation, even though
  -- we actually use it in the codebase. If we remove the dependency, we get linking errors in other
  -- components that depend on this library like `marconi-sidechain`.
  ghc-options:     -Wno-unused-packages
  visibility:      public
  hs-source-dirs:  test-lib
  exposed-modules:
    Test.Gen.Marconi.Cardano.Indexers.MintTokenEvent
    Test.Helpers
    Test.Integration
    Test.Marconi.Cardano.Snapshot

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended, marconi-cardano-core-test-lib}
    , marconi-cardano-indexers
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                   ^>=8.20
    , cardano-api-gen               ^>=8.2
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-node-emulator
    , cardano-node-socket-emulator
    , iohk-monitoring
    , ouroboros-network-protocols
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api             ^>=1.9
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base             >=4.9 && <5
    , bytestring
    , containers
    , contra-tracer
    , data-default
    , directory
    , filepath
    , hedgehog
    , hedgehog-extras
    , lens
    , mtl
    , streaming
    , temporary
    , text
    , time
