cabal-version: 3.0
name:          marconi-chain-index
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>.

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

flag ci
  description: Toggle features on/off when in CI
  manual:      True
  default:     True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

common maybe-unix
  if !os(windows)
    build-depends: unix

library
  import:
    lang
    , maybe-unix

  hs-source-dirs:  src
  c-sources:       cbits/rev.c
  exposed-modules:
    Marconi.ChainIndex.Api.HttpServer
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.CurrentSyncedBlock
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.CurrentSyncedBlock.Tip
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.Echo
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.EpochState
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.MintBurnToken
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.TargetAddresses
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.Utxo
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.Utxo.SpentInfoResult
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.Utxo.Types
    Marconi.ChainIndex.Api.JsonRpc.Endpoint.Utxo.Wrappers
    Marconi.ChainIndex.Api.JsonRpc.Routes
    Marconi.ChainIndex.Api.JsonRpc.Server
    Marconi.ChainIndex.Api.Rest.Endpoint.Metrics
    Marconi.ChainIndex.Api.Rest.Endpoint.Params
    Marconi.ChainIndex.Api.Rest.Endpoint.TargetAddresses
    Marconi.ChainIndex.Api.Rest.Endpoint.Time
    Marconi.ChainIndex.Api.Rest.Routes
    Marconi.ChainIndex.Api.Rest.Server
    Marconi.ChainIndex.Api.Routes
    Marconi.ChainIndex.Api.Types
    Marconi.ChainIndex.CLI
    Marconi.ChainIndex.Error
    Marconi.ChainIndex.Git.Rev
    Marconi.ChainIndex.Git.RevFromGit
    Marconi.ChainIndex.Run
    Marconi.ChainIndex.Utils

  other-modules:   Paths_marconi_chain_index
  autogen-modules: Paths_marconi_chain_index

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended}
    , marconi-cardano-indexers
    , marconi-core
    , marconi-core-json-rpc

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api             ^>=8.20
    , cardano-crypto-class
    , cardano-ledger-shelley
    , cardano-slotting        ^>=0.1.1.1
    , iohk-monitoring
    , ouroboros-consensus

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , bytestring
    , comonad
    , directory
    , filepath
    , lens
    , mtl
    , nonempty-containers
    , optparse-applicative
    , pretty-simple
    , process
    , prometheus-client
    , servant
    , servant-server
    , sqlite-simple
    , template-haskell
    , text
    , time
    , warp

executable marconi-chain-index
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  --------------------
  -- Local components
  --------------------
  build-depends:  marconi-chain-index >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:  base >=4.9 && <5

test-suite marconi-chain-index-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Marconi.ChainIndex.Api.Gen
    Spec.Marconi.ChainIndex.Api.Routes
    Spec.Marconi.ChainIndex.CLI
    Spec.Marconi.ChainIndex.CLIInputValidation
    Spec.Marconi.ChainIndex.Utils

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended, marconi-cardano-core-test-lib}
    , marconi-chain-index
    , marconi-core:{marconi-core, marconi-core-test-lib}

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                  ^>=8.20
    , cardano-api-gen              ^>=8.2
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo        >=1.3.1.1
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-node-emulator
    , cardano-slotting             ^>=0.1.1.1
    , hedgehog-extras
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network
    , plutus-core
    , plutus-ledger-api            ^>=1.9
    , plutus-tx
    , plutus-tx-plugin
    , process

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base                  >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cborg
    , comonad
    , containers
    , contra-tracer
    , directory
    , filepath
    , hedgehog
    , lens
    , mtl
    , nonempty-containers
    , optparse-applicative
    , postgresql-simple
    , prettyprinter
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , temporary
    , text
    , time
    , transformers
