cabal-version: 2.2
name:          marconi-core
version:       1.2.0.0
synopsis:      Indexers that can rewind the state to a previous version.
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi-core#README.md>

category:      Testing
homepage:
  https://github.com/input-output-hk/marconi/marconi-core/README.md

bug-reports:   https://github.com/input-output-hk/marconi/issues
author:        Radu Ometita
maintainer:    radu.ometita@iohk.io
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:          lang
  exposed-modules:
    Marconi.Core.Experiment
    Marconi.Core.Experiment.Class
    Marconi.Core.Experiment.Coordinator
    Marconi.Core.Experiment.Indexer.LastPointIndexer
    Marconi.Core.Experiment.Indexer.ListIndexer
    Marconi.Core.Experiment.Indexer.MixedIndexer
    Marconi.Core.Experiment.Indexer.SQLiteIndexer
    Marconi.Core.Experiment.Query
    Marconi.Core.Experiment.Transformer.Class
    Marconi.Core.Experiment.Transformer.IndexWrapper
    Marconi.Core.Experiment.Transformer.WithAggregate
    Marconi.Core.Experiment.Transformer.WithCache
    Marconi.Core.Experiment.Transformer.WithDelay
    Marconi.Core.Experiment.Transformer.WithPruning
    Marconi.Core.Experiment.Transformer.WithTracer
    Marconi.Core.Experiment.Transformer.WithTransform
    Marconi.Core.Experiment.Type
    Marconi.Core.Experiment.Worker
    Marconi.Core.Storable
    Marconi.Core.TracedStorable

  hs-source-dirs:  src
  build-depends:
    , async
    , base           >=4.7 && <5
    , containers
    , contra-tracer
    , lens
    , mtl
    , primitive
    , sqlite-simple
    , stm
    , text
    , transformers
    , vector

test-suite marconi-core-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Marconi.Core.Model
    Marconi.Core.Spec.Experiment
    Marconi.Core.Spec.Sqlite
    Marconi.Core.Spec.TracedSqlite
    Marconi.Core.Trace

  hs-source-dirs: test
  build-depends:
    , base              >=4.7    && <5
    , contra-tracer
    , lens
    , marconi-core
    , mtl
    , QuickCheck
    , safe
    , sqlite-simple     >=0.4.18
    , tasty
    , tasty-quickcheck
    , transformers
