cabal-version: 3.0
name:          marconi-core
version:       1.2.0.0
synopsis:      Modular indexing for rewindable ledger
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi-core#README.md>

category:      Testing
homepage:
  https://github.com/input-output-hk/marconi/marconi-core/README.md

bug-reports:   https://github.com/input-output-hk/marconi/issues
author:        Nicolas biri
maintainer:    nicolas.biri@iohk.io
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:          lang
  exposed-modules:
    Marconi.Core
    Marconi.Core.Class
    Marconi.Core.Coordinator
    Marconi.Core.Indexer.FileIndexer
    Marconi.Core.Indexer.LastPointIndexer
    Marconi.Core.Indexer.ListIndexer
    Marconi.Core.Indexer.MixedIndexer
    Marconi.Core.Indexer.SQLiteAggregateQuery
    Marconi.Core.Indexer.SQLiteIndexer
    Marconi.Core.Preprocessor
    Marconi.Core.Preprocessor.Resume
    Marconi.Core.Query
    Marconi.Core.Transformer.Class
    Marconi.Core.Transformer.IndexTransformer
    Marconi.Core.Transformer.WithCache
    Marconi.Core.Transformer.WithCatchup
    Marconi.Core.Transformer.WithCatchup.SQLite
    Marconi.Core.Transformer.WithDelay
    Marconi.Core.Transformer.WithFold
    Marconi.Core.Transformer.WithPruning
    Marconi.Core.Transformer.WithTracer
    Marconi.Core.Transformer.WithTransform
    Marconi.Core.Type
    Marconi.Core.Worker

  hs-source-dirs:  src

  ------------------------
  -- IOG dependencies
  ------------------------
  build-depends:   iohk-monitoring

  ------------------------
  -- Other dependencies
  ------------------------
  build-depends:
    , async
    , base           >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , foldl
    , lens
    , mtl
    , sqlite-simple
    , stm
    , text
    , transformers

library marconi-core-test-lib
  import:          lang
  visibility:      public
  hs-source-dirs:  test-lib
  exposed-modules: Test.Marconi.Core.ModelBased

  --------------------
  -- Local components
  --------------------
  build-depends:   marconi-core

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base        >=4.9 && <5
    , lens
    , mtl
    , QuickCheck

test-suite marconi-core-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  Marconi.CoreSpec
  hs-source-dirs: test
  build-depends:
    , base                   >=4.7    && <5
    , containers
    , contra-tracer
    , lens
    , marconi-core
    , marconi-core-test-lib
    , mtl
    , QuickCheck
    , quickcheck-instances
    , sqlite-simple          >=0.4.18
    , tasty
    , tasty-quickcheck
    , temporary
    , transformers
    , uuid
